--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
+    background-color: green;
 }
 
 #computer-cards img {
@@ -16,14 +17,17 @@ body {
 .deal {
     width: 100px;
     font-size: 20px;
+    border: none;
 }
 
 .cbtn {
     width: 150px;
     font-size: 20px;
+    border: none;
 }
 
 .pbtn {
     width: 100px;
     font-size: 20px;
+    border: none;
 }
